--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# requirements.txt - Versión ultra compatible
-streamlit
-opencv-python-headless
-numpy
-pygame
-Pillow
+# requirements.txt
+streamlit>=1.28.0
+opencv-python-headless>=4.8.0
+numpy>=1.24.0
+pygame>=2.5.0
+Pillow>=10.0.0
