--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,4 @@ opencv-python-headless==4.12.0.88
 numpy==2.2.6
 pillow==12.0.0
 pygame==2.6.1
-streamlit-webrtc==0.47.2
-av==10.0.0
-aiortc==1.5.0
+streamlit-webrtc==0.47.9  # Versión disponible
